lang2/macro/tests/ui/fail/11-unsafe-constructor.stderr
error: `unsafe fn` is not supported for ink! functions
  --> $DIR/11-unsafe-constructor.rs:12:9
   |
12 |         unsafe fn invalid_return(&mut self) {}
   |         ^^^^^^
